Code review changes

--- a/app/config/sample.config.json
+++ b/app/config/sample.config.json
@@ -314,7 +314,10 @@
             "bindings": {
                 "bind-title": "'myTitle'",
                 "bind-database": "'myDatabase'",
-                "bind-table": "'myTable'"
+                "bind-table": "'myTable'",
+                "bind-group-fields": "'type1,type2,type3'",
+                "bind-value-field": "'type'",
+                "bind-arc-value": "'count'"
             }
         }, {
             "sizeX": 12,
