Fixed a mistake in the sample.config.json file.

--- a/app/config/sample.config.json
+++ b/app/config/sample.config.json
@@ -209,7 +209,10 @@
         }, {
             "sizeX": 12,
             "sizeY": 8,
-            "type": "map"
+            "type": "map",
+            "bindings": {
+                "bind-config": "'myMap1'"
+            }
         }, {
             "sizeX": 18,
             "sizeY": 4,
