Changed showFilterStatusTray configuration option to hideFilterStatusTray because the filter tray should be enabled by default.

--- a/app/config/sample.config.json
+++ b/app/config/sample.config.json
@@ -437,7 +437,7 @@
         "hideAddVisualizationsButton": false,
         "hideErrorNotifications": false,
         "hideHeaders": false,
-        "showFilterStatusTray": false,
+        "hideFilterStatusTray": false,
         "hideCloseButton": false,
         "showVideoOnLoad": false,
         "showImport": false,
