--- a/app/config/sample.config.yaml
+++ b/app/config/sample.config.yaml
@@ -17,7 +17,7 @@ dashboard:
   gridsterMargins: 10
   hideNavbarItems: false
   hideAdvancedOptions: false
-  showFilterStatusTray: false
+  hideFilterStatusTray: false
   hideErrorNotifications: false
   hideHeaders: false
   hideCloseButton: false
