--- a/app/config/sample.config.yaml
+++ b/app/config/sample.config.yaml
@@ -58,6 +58,24 @@ externalServices:
         propertyName2: neonMapping4
 visualizations:
   -
+    name: Aggregation Table
+    sizeX: 6
+    sizeY: 4
+    type: count-by
+    icon: img/visualizations/Count64.png
+  -
+    name: Bar Chart
+    sizeX: 6
+    sizeY: 4
+    type: barchart
+    icon: img/visualizations/BarChart64.png
+  -
+    name: Data Table
+    sizeX: 6
+    sizeY: 4
+    type: query-results-table
+    icon: img/visualizations/ViewData64.png
+  -
     name: Filter Builder
     sizeX: 12
     minSizeX: 12
@@ -66,31 +84,17 @@ visualizations:
     type: filter-builder
     icon: img/visualizations/CreateFilter64.png
   -
-    name: Data Table
+    name: Gantt Chart
     sizeX: 6
     sizeY: 4
-    type: query-results-table
-    icon: img/visualizations/ViewData64.png
+    type: gantt-chart
+    icon: img/visualizations/Gantt64.png
   -
-    name: Timeline
-    sizeX: 12
-    minSizeX: 12
-    sizeY: 4
-    minSizeY: 4
-    type: timeline-selector
-    icon: img/visualizations/Timeline64.png
-  -
-    name: Map
+    name: Graph
     sizeX: 12
     sizeY: 6
-    type: map
-    icon: img/visualizations/Map64.png
-  -
-    name: Ops Clock
-    sizeX: 6
-    sizeY: 4
-    type: circular-heat-form
-    icon: img/visualizations/OpsClock64.png
+    type: directed-graph
+    icon: img/visualizations/Graph64.png
   -
     name: Line Chart
     sizeX: 6
@@ -98,11 +102,29 @@ visualizations:
     type: linechart
     icon: img/visualizations/LineChart64.png
   -
-    name: Bar Chart
+    name: Map
+    sizeX: 12
+    sizeY: 6
+    type: map
+    icon: img/visualizations/Map64.png
+  -
+    name: Newsfeed
     sizeX: 6
     sizeY: 4
-    type: barchart
-    icon: img/visualizations/BarChart64.png
+    type: newsfeed
+    icon: img/visualizations/News64.png
+  -
+    name: Ops Clock
+    sizeX: 6
+    sizeY: 4
+    type: circular-heat-form
+    icon: img/visualizations/OpsClock64.png
+  -
+    name: Scatter Plot
+    sizeX: 6
+    sizeY: 4
+    type: plotly-graph
+    icon: img/visualizations/ScatterPlot64.png
   -
     name: Sunburst Chart
     sizeX: 6
@@ -116,59 +138,13 @@ visualizations:
     type: tag-cloud
     icon: img/visualizations/TagCloud64.png
   -
-    name: Aggregation Table
-    sizeX: 6
-    sizeY: 4
-    type: count-by
-    icon: img/visualizations/Count64.png
-  -
-    name: Graph
+    name: Timeline
     sizeX: 12
-    sizeY: 6
-    type: directed-graph
-    icon: img/visualizations/Graph64.png
-  -
-    name: Newsfeed
-    sizeX: 6
+    minSizeX: 12
     sizeY: 4
-    type: newsfeed
-    icon: img/visualizations/News64.png
-  -
-    name: Gantt Chart
-    sizeX: 6
-    sizeY: 4
-    type: gantt-chart
-    icon: img/visualizations/Gantt64.png
-  -
-    name: Scatterplot-gl
-    sizeX: 2
-    sizeY: 2
-    type: plotly-graph
-    icon: img/Neon_60x34.png
-    bindings:
-      graph-type: "'scattergl'"
-      bind-attr-x: "'depth'"
-      bind-attr-y: "'mag'"
-  -
-    name: Hybrid Heatmap
-    sizeX: 2
-    sizeY: 2
-    type: plotly-graph
-    icon: img/Neon_60x34.png
-    bindings:
-      graph-type: "'heatmapScatter'"
-      bind-attr-x: "'depth'"
-      bind-attr-y: "'mag'"
-  -
-    name: Hybrid Histogram
-    sizeX: 2
-    sizeY: 2
-    type: plotly-graph
-    icon: img/Neon_60x34.png
-    bindings:
-      graph-type: "'histogramScatter'"
-      bind-attr-x: "'depth'"
-      bind-attr-y: "'mag'"
+    minSizeY: 4
+    type: timeline-selector
+    icon: img/visualizations/Timeline64.png
   -
     name: Sample
     sizeX: 6
