NEON-1894 Add visualization specific options to layout step of wizard

--- a/app/config/sample.config.json
+++ b/app/config/sample.config.json
@@ -438,7 +438,7 @@
         "sizeY": 4,
         "minSizeY": 4,
         "type": "timeline-selector",
-        "icon": "Timeline"
+        "icon": "Timeline64"
     }, {
         "name": "Sample",
         "sizeX": 6,
