NEON-1902 Add more mappings and change layout to field step in wizard

--- a/.jshintrc
+++ b/.jshintrc
@@ -108,9 +108,11 @@
         "neon": true,
         "neonColors": true,
         "neonMappings": true,
+        "neonWizard": true,
         "ocpu": true,
         "OpenLayers": true,
         "OWF": true,
+        "Plotly": true,
         "require": true,
         "Rainbow": true,
         "Slick": true,
