--- a/app/config/sample.config.yaml
+++ b/app/config/sample.config.yaml
@@ -90,12 +90,6 @@ visualizations:
     type: gantt-chart
     icon: Gantt64
   -
-    name: Graph
-    sizeX: 12
-    sizeY: 6
-    type: directed-graph
-    icon: Graph64
-  -
     name: Line Chart
     sizeX: 6
     sizeY: 4
@@ -107,6 +101,12 @@ visualizations:
     sizeY: 6
     type: map
     icon: Map64
+  -
+    name: Network Graph
+    sizeX: 12
+    sizeY: 6
+    type: directed-graph
+    icon: Graph64
   -
     name: Newsfeed
     sizeX: 6
