Adding help documentation for the 1.1.5 release.

--- a/app/config/sample.config.json
+++ b/app/config/sample.config.json
@@ -498,7 +498,7 @@
     },
 
     "help": {
-        "guide": "",
+        "guide": "./help/Neon-Dashboard-User-Guide-1.1.5.pdf",
         "webVideo": "",
         "localVideo": ""
     },
