--- a/app/config/sample.config.yaml
+++ b/app/config/sample.config.yaml
@@ -27,7 +27,7 @@ dashboard:
   translationKeys:
     google: API_KEY
 help:
-  guide:
+  guide: ./help/Neon-Dashboard-User-Guide-1.1.5.pdf
   webVideo:
   localVideo:
 opencpu:
