Updating file paths used in the build and referenced by other files to accommodate the restructuring.

--- a/.gitignore
+++ b/.gitignore
@@ -4,13 +4,12 @@
 .swp
 .tmp
 !.gitkeep
-app/lib
-app/css/app.css
-app/css/dark-green.css
-app/css/dark-purple.css
-app/css/light-green.css
-build
-bower_components/
+client/bower_components
+client/app/app.css
+client/app/themes/dark-green.css
+client/app/themes/dark-purple.css
+client/app/themes/light-green.css
+dist/
 config.json
 *.config.json
 config.yaml
@@ -18,7 +17,7 @@ config.yaml
 docs/
 logs/*
 node_modules/
-reports
+reports/
 target/
 tmp
 version.json
