--- a/client/app/config/sample.config.yaml
+++ b/client/app/config/sample.config.yaml
@@ -9,7 +9,7 @@ user_ale:
     - chart_group
     - query_group
     - graph_group
-  workerUrl: lib/user-ale/js/userale-worker.js
+  workerUrl: bower_components/user-ale/js/userale-worker.js
   debug: false
   sendLogs: false
 dashboard:
@@ -27,7 +27,7 @@ dashboard:
   translationKeys:
     google: API_KEY
 help:
-  guide: ./help/Neon-Dashboard-User-Guide-1.1.5.pdf
+  guide: ./app/help/Neon-Dashboard-User-Guide-1.1.5.pdf
   webVideo:
   localVideo:
 opencpu:
@@ -434,6 +434,6 @@ layouts:
         bind-table: "'myTable'"
 files:
   datasets:
-    - ./config/sample.dataset.config.json
+    - ./app/config/sample.dataset.config.json
   layouts:
-    - ./config/sample.layout.config.json
+    - ./app/config/sample.layout.config.json
