--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "grunt-contrib-uglify": "0.10.1",
         "grunt-contrib-watch": "0.6.1",
         "grunt-contrib-yuidoc": "0.7.0",
+        "grunt-eol": "0.2.0",
         "grunt-exec": "0.4.6",
         "grunt-git-describe": "2.3.2",
         "grunt-injector": "0.6.1",
