--- a/client/app/config/sample.config.json
+++ b/client/app/config/sample.config.json
@@ -34,7 +34,7 @@
     },
 
     "help": {
-        "guide": "./app/help/Neon-Dashboard-User-Guide-1.1.5.pdf",
+        "guide": "./app/help/Neon-Dashboard-User-Guide.pdf",
         "webVideo": "",
         "localVideo": ""
     },
