--- a/package.json
+++ b/package.json
@@ -1,55 +1,56 @@
 {
-    "name": "neon-gtd",
-    "shortDescription": "Neon Geo Temporal Dashboard",
-    "description": "A sample geo-temporal analysis dashboard that uses the neon.js library to show interactions between multiple visualizations of a dataset.",
-    "version": "1.2.0-snapshot",
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/NextCenturyCorporation/neon-gtd"
-    },
-    "license": "Apache v2",
-    "private": true,
-    "devDependencies": {
-        "bower": "1.4.1",
-        "grunt": "0.4.5",
-        "grunt-angular-templates": "0.5.9",
-        "grunt-cli": "0.1.13",
-        "grunt-contrib-clean": "0.6.0",
-        "grunt-contrib-concat": "0.5.1",
-        "grunt-contrib-copy": "0.8.2",
-        "grunt-contrib-cssmin": "0.14.0",
-        "grunt-contrib-jshint": "0.11.2",
-        "grunt-contrib-less": "1.0.0",
-        "grunt-contrib-uglify": "0.10.1",
-        "grunt-contrib-watch": "0.6.1",
-        "grunt-contrib-yuidoc": "0.7.0",
-        "grunt-eol": "0.2.0",
-        "grunt-exec": "0.4.6",
-        "grunt-git-describe": "2.3.2",
-        "grunt-injector": "0.6.1",
-        "grunt-jscs": "1.8.0",
-        "grunt-karma": "0.10.1",
-        "grunt-spritesmith": "5.2.0",
-        "grunt-usemin": "2.1.1",
-        "grunt-war": "0.4.5",
-        "grunt-wiredep": "2.0.0",
-        "http-server": "0.8.0",
-        "karma": "0.12.31",
-        "karma-junit-reporter": "0.2.2",
-        "karma-chrome-launcher": "0.1.8",
-        "karma-phantomjs-launcher": "0.1.4",
-        "karma-ng-html2js-preprocessor": "0.1.2",
-        "shelljs": "0.4.0"
-    },
-    "scripts": {
-        "postinstall": "",
-        "prestart": "npm install",
-        "start": "http-server -a localhost -p 8000 -c-1",
-        "pretest": "npm install",
-        "test": "karma start karma.conf.js",
-        "test-single-run": "karma start karma.conf.js  --single-run",
-        "preupdate-webdriver": "npm install",
-        "update-webdriver": "webdriver-manager update",
-        "update-index-async": "node -e \"require('shelljs/global'); sed('-i', /\\/\\/@@NG_LOADER_START@@[\\s\\S]*\\/\\/@@NG_LOADER_END@@/, '//@@NG_LOADER_START@@\\n' + sed(/sourceMappingURL=angular-loader.min.js.map/,'sourceMappingURL=bower_components/angular-loader/angular-loader.min.js.map','app/bower_components/angular-loader/angular-loader.min.js') + '\\n//@@NG_LOADER_END@@', 'app/index-async.html');\""
-    }
+  "name": "neon-gtd",
+  "shortDescription": "Neon Geo Temporal Dashboard",
+  "description": "A sample geo-temporal analysis dashboard that uses the neon.js library to show interactions between multiple visualizations of a dataset.",
+  "version": "1.2.0-snapshot",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/NextCenturyCorporation/neon-gtd"
+  },
+  "license": "Apache v2",
+  "private": true,
+  "devDependencies": {
+    "bower": "1.4.1",
+    "grunt": "0.4.5",
+    "grunt-angular-templates": "0.5.9",
+    "grunt-cli": "0.1.13",
+    "grunt-contrib-clean": "0.6.0",
+    "grunt-contrib-concat": "0.5.1",
+    "grunt-contrib-copy": "0.8.2",
+    "grunt-contrib-cssmin": "0.14.0",
+    "grunt-contrib-jshint": "0.11.2",
+    "grunt-contrib-less": "1.0.0",
+    "grunt-contrib-uglify": "0.10.1",
+    "grunt-contrib-watch": "0.6.1",
+    "grunt-contrib-yuidoc": "0.7.0",
+    "grunt-eol": "0.2.0",
+    "grunt-exec": "0.4.6",
+    "grunt-git-describe": "2.3.2",
+    "grunt-injector": "0.6.1",
+    "grunt-jscs": "1.8.0",
+    "grunt-karma": "0.10.1",
+    "grunt-spritesmith": "5.2.0",
+    "grunt-usemin": "2.1.1",
+    "grunt-war": "0.4.5",
+    "grunt-wiredep": "2.0.0",
+    "http-server": "0.8.0",
+    "karma": "0.12.31",
+    "karma-junit-reporter": "0.2.2",
+    "karma-chrome-launcher": "0.1.8",
+    "karma-phantomjs-launcher": "0.1.4",
+    "karma-ng-html2js-preprocessor": "0.1.2",
+    "karma-jasmine": "^0.3.8",
+    "shelljs": "0.4.0"
+  },
+  "scripts": {
+    "postinstall": "",
+    "prestart": "npm install",
+    "start": "http-server -a localhost -p 8000 -c-1",
+    "pretest": "npm install",
+    "test": "karma start karma.conf.js",
+    "test-single-run": "karma start karma.conf.js  --single-run",
+    "preupdate-webdriver": "npm install",
+    "update-webdriver": "webdriver-manager update",
+    "update-index-async": "node -e \"require('shelljs/global'); sed('-i', /\\/\\/@@NG_LOADER_START@@[\\s\\S]*\\/\\/@@NG_LOADER_END@@/, '//@@NG_LOADER_START@@\\n' + sed(/sourceMappingURL=angular-loader.min.js.map/,'sourceMappingURL=bower_components/angular-loader/angular-loader.min.js.map','app/bower_components/angular-loader/angular-loader.min.js') + '\\n//@@NG_LOADER_END@@', 'app/index-async.html');\""
+  }
 }
