Adding some missing OWF files for the widgets, updating Grunt and fixing a few random typos.

--- a/.jshintrc
+++ b/.jshintrc
@@ -106,6 +106,7 @@
         "Mustache": true,
         "neon": true,
         "neonColors": true,
+        "NeonGTDSetup": true,
         "neonMappings": true,
         "neonWizard": true,
         "neonVisualizations": true,
@@ -117,6 +118,7 @@
         "Rainbow": true,
         "Slick": true,
         "tables": true,
+        "timerId": true,
         "userale": true,
         "uuid": true,
         "window": true,
