Multi-field or multi-value filters can now be defined for the legend in the dashboard configuration file.

--- a/client/app/config/sample.config.json
+++ b/client/app/config/sample.config.json
@@ -444,6 +444,18 @@
                     "field": "myField",
                     "operator": "contains"
                 }
+            }, {
+                "label": "My Group 2",
+                "multi": {
+                    "myField": [{
+                        "value": "A"
+                    }, {
+                        "operator": "contains",
+                        "value": "B"
+                    }, {
+                        "value": ["C", "D"]
+                    }]
+                }
             }]
         }
     },
