--- a/client/app/config/sample.config.yaml
+++ b/client/app/config/sample.config.yaml
@@ -708,6 +708,19 @@ legends:
         customized:
             field: myField
             operator: contains
+      -
+        label: My Group 2
+        multi:
+          myField:
+            -
+              value: A
+            -
+              operator: contains
+              value: B
+            -
+              value:
+                - C
+                - D
 
 files:
   datasets:
