Renamed the legend visualization to the custom filter list visualization.  Also fixed a few code style issues and removed references to the external route service which were accidentally included in a previous commit.

--- a/client/app/config/sample.config.json
+++ b/client/app/config/sample.config.json
@@ -386,7 +386,7 @@
         }]
     },
 
-    "legends": {
+    "customFilters": {
         "test": {
             "earthquakes": [{
                 "label": "Types",
